# persist-topological-forgetting

./: .gitignore  CLAUDE.md  EXPERIMENT_LOG.md  README.md  pyproject.toml
configs/: exp01.yaml  exp01_cifar10.yaml  exp01_convnext.yaml  exp01_convnext_cifar10.yaml  exp01_convnext_cub200.yaml  exp01_convnext_resisc45.yaml  exp01_cub200.yaml  exp01_densenet121.yaml  exp01_densenet121_cifar10.yaml  exp01_densenet121_cub200.yaml  exp01_densenet121_resisc45.yaml  exp01_efficientnet.yaml  exp01_efficientnet_cifar10.yaml  exp01_efficientnet_cub200.yaml  exp01_efficientnet_resisc45.yaml  exp01_mlpmixer.yaml  exp01_mlpmixer_cifar10.yaml  exp01_mlpmixer_cub200.yaml  exp01_mlpmixer_resisc45.yaml  exp01_mobilenetv3.yaml  exp01_mobilenetv3_cifar10.yaml  exp01_mobilenetv3_cub200.yaml  exp01_mobilenetv3_resisc45.yaml  exp01_regnet.yaml  exp01_regnet_cifar10.yaml  exp01_regnet_cub200.yaml  exp01_regnet_resisc45.yaml  exp01_resisc45.yaml  exp01_resnet18wide.yaml  exp01_resnet18wide_cifar10.yaml  exp01_resnet18wide_cub200.yaml  exp01_resnet18wide_resisc45.yaml  exp01_resnet50.yaml  exp01_resnet50_cifar10.yaml  exp01_resnet50_cub200.yaml  exp01_resnet50_resisc45.yaml  exp01_shufflenet.yaml  exp01_shufflenet_cifar10.yaml  exp01_shufflenet_cub200.yaml  exp01_shufflenet_resisc45.yaml  (+31 more)
dashboard/: app.py
dashboard/templates/: index.html
experiments/exp01_topological_persistence/: phase1_train_task_a.py  phase2_landscape_topology.py  phase2b_displacement_analysis.py  phase4_correlation.py  (+1 more)
paper/: generate_figures.py  main.tex  references.bib
scripts/: run_multiseed_multislice.sh
(+5 files in other folders)
